common/libxl-3.1.0_破解/libxl-3.1.0/include_c/SheetA.h

    XLAPI           void XLAPIENTRY xlSheetSetNameA(SheetHandle handle, const char* name);